--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [dev-packages]
-"e1839a8" = {path = ".", editable = true}
+e1839a8 = {path = ".",editable = true}
 
 [packages]
+ipython = "*"
 
 [requires]
-python_version = "2.7"
+python_version = "3.6"
